--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@ excerpt: "facilitating community engagement through the arts"
 
 ---
 
+<h1>Projects</h1>
+
+<div class="grid">
+    {% for project in site.data.projects %}
+        <div class="grid-item">
+            <a alt="{{ project.name }}" href="{{ project.link }}" title="{{ project.name }}">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        {{ project.name }}
+                    </div>
+                    <div class="panel-body" style="background: url('{{ project.image }}') no-repeat; background-size: cover; min-height: 200px;"></div>
+                </div>
+            </a>
+        </div>
+    {% endfor %}
+</div>
 
 <h1><center>We are gathering art supplies... to build this into a beautiful website. Please check back soon</center></h1>
 
