Change header image

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ permalink: /
 header:
   #overlay_color: "#5e616c"
   overlay_image: /assets/images/CommunityCanvasesHeader.jpg
-  caption: Community Canvases project with artists Chuck Tingley and Edreys Wajed
+  #caption: Community Canvases project with artists Chuck Tingley and Edreys Wajed
 excerpt: "facilitating community engagement through art"
 
 ---
