--- a/index.html
+++ b/index.html
@@ -28,5 +28,5 @@ excerpt: "facilitating community engagement through the arts"
 
 <h1><center>We are gathering art supplies... to build this into a beautiful website. Please check back soon</center></h1>
 
-Contact us: <a href=mailto:communitycanvases716@gmail.com>communitycanvases716@gmail.com</a>
+Contact us: <a href=mailto:team@communitycanvases.org>team@communitycanvases.org</a>
 
